package com.zeven.ets_proyect.Ets_Proyect.repositories;

import com.zeven.ets_proyect.Ets_Proyect.entities.AvailableSizesEntity;
import org.springframework.data.repository.CrudRepository;

public interface AvailableSizesRepository extends CrudRepository<AvailableSizesEntity, Long> {
}
