package com.zeven.ets_proyect.Ets_Proyect.repositories;

import com.zeven.ets_proyect.Ets_Proyect.entities.SneakerEntity;
import org.springframework.data.repository.CrudRepository;

public interface SneakerRepository extends CrudRepository<SneakerEntity, Long> {
}
